internal/generator/output/interop_array.h

typedef struct {
    void* data;
    int length;
    int elementSize;
} GoArray;
typedef struct {
    GoArray v0;
    bool v1;
} Player_Player_Sleeping_Result;
typedef struct {
    int v0;
    uint64_t v1;
} Scoreboard_Scoreboard_Write_Result;
typedef struct {
    int v0;
    uint64_t v1;
} Scoreboard_Scoreboard_WriteString_Result;
void Player_Player_SetFlightSpeed(uint64_t self, double p1);
void Player_Player_SetFood(uint64_t self, int p1);
void Player_Player_SetGameMode(uint64_t self, uint64_t p1);
void Player_Player_SetHeldItems(uint64_t self, uint64_t p1, uint64_t p2);
uint64_t Player_Player_SetHeldSlot(uint64_t self, int p1);
void Player_Player_SetImmobile(uint64_t self);
void Player_Player_SetInvisible(uint64_t self);
void Player_Player_SetMaxAirSupply(uint64_t self, int64_t p1);
void Player_Player_SetMaxHealth(uint64_t self, double p1);
void Player_Player_SetMobile(uint64_t self);
void Player_Player_SetNameTag(uint64_t self, char* p1);
void Player_Player_SetOnFire(uint64_t self, int64_t p1);
void Player_Player_SetScale(uint64_t self, double p1);
void Player_Player_SetScoreTag(uint64_t self, uint64_t p1);
void Player_Player_SetSkin(uint64_t self, uint64_t p1);
void Player_Player_SetSpeed(uint64_t self, double p1);
void Player_Player_SetVelocity(uint64_t self, uint64_t p1);
void Player_Player_SetVerticalFlightSpeed(uint64_t self, double p1);
void Player_Player_SetVisible(uint64_t self);
void Player_Player_ShowCoordinates(uint64_t self);
void Player_Player_ShowEntity(uint64_t self, uint64_t p1);
void Player_Player_ShowHudElement(uint64_t self, uint64_t p1);
void Player_Player_ShowParticle(uint64_t self, uint64_t p1, uint64_t p2);
uint64_t Player_Player_Skin(uint64_t self);
void Player_Player_Sleep(uint64_t self, uint64_t p1);
Player_Player_Sleeping_Result Player_Player_Sleeping(uint64_t self);
bool Player_Player_Sneaking(uint64_t self);
double Player_Player_Speed(uint64_t self);
void Player_Player_Splash(uint64_t self, uint64_t p1, uint64_t p2);
bool Player_Player_Sprinting(uint64_t self);
void Player_Player_StartBreaking(uint64_t self, uint64_t p1, int p2);
void Player_Player_StartCrawling(uint64_t self);
void Player_Player_StartFlying(uint64_t self);
void Player_Player_StartGliding(uint64_t self);
void Player_Player_StartSneaking(uint64_t self);
void Player_Player_StartSprinting(uint64_t self);
void Player_Player_StartSwimming(uint64_t self);
void Player_Player_StopCrawling(uint64_t self);
void Player_Player_StopFlying(uint64_t self);
void Player_Player_StopGliding(uint64_t self);
void Player_Player_StopSneaking(uint64_t self);
void Player_Player_StopSprinting(uint64_t self);
void Player_Player_StopSwimming(uint64_t self);
bool Player_Player_Swimming(uint64_t self);
void Player_Player_SwingArm(uint64_t self);
void Player_Player_Teleport(uint64_t self, uint64_t p1);
void Player_Player_Tick(uint64_t self, uint64_t p1, int64_t p2);
double Player_Player_TorsoHeight(uint64_t self);
uint64_t Player_Player_Transfer(uint64_t self, char* p1);
uint64_t Player_Player_TurnLecternPage(uint64_t self, uint64_t p1, int p2);
uint64_t Player_Player_Tx(uint64_t self);
GoArray Player_Player_UUID(uint64_t self);
void Player_Player_UpdateDiagnostics(uint64_t self, uint64_t p1);
void Player_Player_UseItem(uint64_t self);
void Player_Player_UseItemOnBlock(uint64_t self, uint64_t p1, int p2, uint64_t p3);
bool Player_Player_UseItemOnEntity(uint64_t self, uint64_t p1);
bool Player_Player_UsingItem(uint64_t self);
GoArray Player_Player_Velocity(uint64_t self);
double Player_Player_VerticalFlightSpeed(uint64_t self);
GoArray Player_Player_VisibleDebugShapes(uint64_t self);
void Player_Player_Wake(uint64_t self);
char* Player_Player_XUID(uint64_t self);
uint64_t Scoreboard_Scoreboard_Ctor(void);
bool Scoreboard_Scoreboard_Descending(uint64_t self);
GoArray Scoreboard_Scoreboard_Lines(uint64_t self);
char* Scoreboard_Scoreboard_Name(uint64_t self);
void Scoreboard_Scoreboard_Remove(uint64_t self, int p1);
void Scoreboard_Scoreboard_RemovePadding(uint64_t self);
void Scoreboard_Scoreboard_Set(uint64_t self, int p1, char* p2);
void Scoreboard_Scoreboard_SetDescending(uint64_t self);
Scoreboard_Scoreboard_Write_Result Scoreboard_Scoreboard_Write(uint64_t self, uint64_t p1);
Scoreboard_Scoreboard_WriteString_Result Scoreboard_Scoreboard_WriteString(uint64_t self, char* p1);
uint64_t Session_Diagnostics_Ctor(void);
uint64_t Skin_Skin_Ctor(void);
uint64_t Skin_Skin_At(uint64_t self, int p1, int p2);
uint64_t Skin_Skin_Bounds(uint64_t self);
uint64_t Skin_Skin_ColorModel(uint64_t self);
uint64_t Title_Title_Ctor(void);