internal/generator/output/interop_bindings.g.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetFlightSpeed(ulong self, double p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetFood(ulong self, int p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetGameMode(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetHeldItems(ulong self, ulong p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_SetHeldSlot(ulong self, int p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetImmobile(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetInvisible(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetMaxAirSupply(ulong self, long p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetMaxHealth(ulong self, double p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetMobile(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetNameTag(ulong self, IntPtr p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetOnFire(ulong self, long p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetScale(ulong self, double p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetScoreTag(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetSkin(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetSpeed(ulong self, double p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetVelocity(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetVerticalFlightSpeed(ulong self, double p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SetVisible(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_ShowCoordinates(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_ShowEntity(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_ShowHudElement(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_ShowParticle(ulong self, ulong p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_Skin(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Sleep(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Player_Player_Sleeping_Result Player_Player_Sleeping(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_Sneaking(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Player_Player_Speed(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Splash(ulong self, ulong p1, ulong p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_Sprinting(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_StartBreaking(ulong self, ulong p1, int p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_StartCrawling(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_StartFlying(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_StartGliding(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_StartSneaking(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_StartSprinting(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_StartSwimming(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_StopCrawling(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_StopFlying(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_StopGliding(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_StopSneaking(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_StopSprinting(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_StopSwimming(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_Swimming(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_SwingArm(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Teleport(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Tick(ulong self, ulong p1, long p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Player_Player_TorsoHeight(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_Transfer(ulong self, IntPtr p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_TurnLecternPage(ulong self, ulong p1, int p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Player_Player_Tx(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Player_Player_UUID(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_UpdateDiagnostics(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_UseItem(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_UseItemOnBlock(ulong self, ulong p1, int p2, ulong p3);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_UseItemOnEntity(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Player_Player_UsingItem(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Player_Player_Velocity(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern double Player_Player_VerticalFlightSpeed(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Player_Player_VisibleDebugShapes(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Player_Player_Wake(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Player_Player_XUID(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Scoreboard_Scoreboard_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern byte Scoreboard_Scoreboard_Descending(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern GoArrayNative Scoreboard_Scoreboard_Lines(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr Scoreboard_Scoreboard_Name(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Scoreboard_Scoreboard_Remove(ulong self, int p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Scoreboard_Scoreboard_RemovePadding(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Scoreboard_Scoreboard_Set(ulong self, int p1, IntPtr p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Scoreboard_Scoreboard_SetDescending(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Scoreboard_Scoreboard_Write_Result Scoreboard_Scoreboard_Write(ulong self, ulong p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Scoreboard_Scoreboard_WriteString_Result Scoreboard_Scoreboard_WriteString(ulong self, IntPtr p1);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Session_Diagnostics_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Skin_Skin_Ctor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Skin_Skin_At(ulong self, int p1, int p2);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Skin_Skin_Bounds(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Skin_Skin_ColorModel(ulong self);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong Title_Title_Ctor();
